--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "postcss": "^8.4.20",
     "prettier": "^2.8.2",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "tailwindcss": "^3.2.4",
