--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 VITE_NODE_ENV="prod"
-VITE_BASE_URL="https://anxinxue.net/bank"
+VITE_BASE_URL="https://www.anxinxue.net/bank"
 VITE_MODE="生产"
 VITE_TITLE="校外教培机构综合监管平台"
