项目结构更改

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,13 @@
 VITE_NODE_ENV="prod"
+
+# api site
 VITE_BASE_URL="https://www.anxinxue.net/bank"
+
+# mode
 VITE_MODE="生产"
-VITE_TITLE="校外教培机构综合监管平台"
+
+# compress config
+VITE_USE_COMPRESS = true
+
+# imagemin config
+VITE_USE_IMAGEMIN = true
