--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,13 @@
 VITE_NODE_ENV="beta"
+
+# api site
 VITE_BASE_URL="https://bankbeta.smartcampus.cloud"
+
+# mode
 VITE_MODE="测试"
-VITE_TITLE="校外教培机构综合监管平台"
+
+# compress config
+VITE_USE_COMPRESS = true
+
+# imagemin config
+VITE_USE_IMAGEMIN = true
